--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 
 <p>
   <ul>
-<li><b>Instructor:</b> Mingyuan Zhou, Ph.D., Assistant Professor of Statistics <br> 
+<li><b>Instructor:</b> Mingyuan Zhou, Ph.D., Associate Professor of Statistics <br> 
 <li><b>Office:</b> CBA 6.458 (Six floor, on the east side of the building that faces the entrance of Gregory Gym) </li>
 <li><b>Email:</b> <a href="mailto:mingyuan.zhou@mccombs.utexas.edu">mingyuan.zhou@mccombs.utexas.edu</a> 
 <li><b>Phone:</b> 512-232-6763
 <li><b>Website:</b> 
 <a style=" color: blue;" href="http://mingyuanzhou.github.io/">http://mingyuanzhou.github.io/</a></li>
-<li><b>Office Hours:</b> Thursday 4:00-5:30 PM. Welcome to come by my office at other times as well. </li>
-<li><b>Class time:</b> Thursday 1:00 - 4:00 PM</li>	  
-<li><b>Classroom:</b> CBA 6.420 (note the room change to accomodate more students; the classroom is located at the southwest corner of CBA six floor) </li>		   
+<li><b>Office Hours:</b> Tuesday 2:00 - 3:00 PM. Welcome to come by my office at other times as well. </li>
+<li><b>Class time:</b> Tuesday 3:00 - 6:00 PM</li>	  
+<li><b>Classroom:</b> SZB 240 </li>		   
 <!-- <li><b>Syllabus:</b> TBA	-->
 <!--<li><b>Teaching Assistant:</b> 
 			<ul>
@@ -56,7 +56,7 @@
 <h3>Syllabus</h3>
 <p>
 <ul>
-<a style=" color: blue;" href="notes/syllabus_STA380_Spring2018_ZHOU.pdf">syllabus_STA380_Spring2018_ZHOU.pdf</a> 
+<a style=" color: blue;" href="notes/syllabus_BayesDL_Fall2019_ZHOU.pdf">syllabus_BayesDL_Fall2019_ZHOU</a> 
 </ul>
 </p>
 
@@ -73,6 +73,8 @@ Ian Goodfellow, Yoshua Bengio, and Aaron Courville, Deep Learning
 </li>
 </ul>
 <ul>
+
+<!--
 
 <li> Lecture 1: Probability, Likelihood, Prior, and Posterior
 		<ul>
@@ -427,7 +429,7 @@ representation
 
 
 
-
+-->
 
 
 	</ul>
